Fix header z-index

--- a/src/assets/styles/pages/_index.scss
+++ b/src/assets/styles/pages/_index.scss
@@ -6,7 +6,6 @@ header {
   height: 100%;
   min-height: stretch;
   overflow: hidden;
-  z-index: -2;
 
   .background-image {
     display: block;
